# proc_macro_global_state_test

./: Cargo.toml
src/: main.rs
