[package]
name = "proc_macro_global_state_test"
version = "0.1.0"
authors = ["Andrew Browne <dersaidin@dersaidin.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DerSaidin/proc_macro_global_state_test"
description = "Example procedural macro using globals."

[dependencies]
proc_macro_global_state = "0.1.0"
